--- a/package.json
+++ b/package.json
@@ -81,13 +81,13 @@
         "react-native-launch-navigator": "^1.0.9",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-localize": "^3.3.0",
-        "react-native-maps": "^1.20.0",
+        "react-native-maps": "1.20.0",
         "react-native-maps-directions": "^1.9.0",
         "react-native-mmkv-storage": "^0.11.0",
         "react-native-notifications": "^5.1.0",
         "react-native-otp-entry": "^1.7.3",
         "react-native-permissions": "^4.1.1",
-        "react-native-reanimated": "^3.16.1",
+        "react-native-reanimated": "3.16.1",
         "react-native-render-html": "^6.3.4",
         "react-native-safe-area-context": "^5.0.0",
         "react-native-screens": "^4.3.0",
@@ -95,7 +95,7 @@
         "react-native-signature-canvas": "^4.7.2",
         "react-native-snap-carousel": "^3.9.1",
         "react-native-super-grid": "^6.0.1",
-        "react-native-svg": "^15.10.1",
+        "react-native-svg": "15.10.1",
         "react-native-vision-camera": "^4.6.4",
         "react-native-web": "^0.19.13",
         "react-native-webview": "^13.12.3",
