--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "description": "Order management, geolocation tracking and navigation for Fleetbase drivers.",
     "private": true,
     "scripts": {
+        "postinstall": "patch-package",
         "android": "react-native run-android",
         "ios": "react-native run-ios",
         "start": "react-native start",
@@ -72,7 +73,7 @@
         "react-native-fbsdk-next": "^13.4.0",
         "react-native-file-viewer": "^2.1.5",
         "react-native-fs": "^2.20.0",
-        "react-native-gesture-handler": "^2.20.2",
+        "react-native-gesture-handler": "~2.20.0",
         "react-native-get-random-values": "^1.11.0",
         "react-native-haptic-feedback": "^2.3.3",
         "react-native-i18n": "^2.0.15",
@@ -130,6 +131,8 @@
         "html-webpack-plugin": "^5.6.3",
         "jest": "^29.6.3",
         "metro-react-native-babel-preset": "^0.77.0",
+        "patch-package": "^8.0.1",
+        "postinstall-postinstall": "^2.1.0",
         "prettier": "^3.3.3",
         "react-test-renderer": "18.3.1",
         "style-loader": "^4.0.0",
