--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "description": "Order management, geolocation tracking and navigation for Fleetbase drivers.",
     "private": true,
     "scripts": {
+        "postinstall": "patch-package",
         "android": "react-native run-android",
         "ios": "react-native run-ios",
         "start": "react-native start",
@@ -59,20 +60,20 @@
         "locale-emoji": "^0.3.0",
         "react": "18.3.1",
         "react-dom": "^18.3.1",
-        "react-native": "0.77.0-rc.6",
+        "react-native": "0.77.0",
         "react-native-background-fetch": "^4.2.7",
         "react-native-background-geolocation": "^4.18.6",
         "react-native-bootsplash": "^5.3.0",
         "react-native-calendar-strip": "^2.2.6",
         "react-native-collapsible": "^1.6.2",
-        "react-native-config": "^1.5.3",
+        "react-native-config": "1.5.3",
         "react-native-device-info": "^14.0.4",
         "react-native-event-listeners": "^1.0.7",
         "react-native-fast-image": "^8.6.3",
         "react-native-fbsdk-next": "^13.4.0",
         "react-native-file-viewer": "^2.1.5",
         "react-native-fs": "^2.20.0",
-        "react-native-gesture-handler": "^2.20.2",
+        "react-native-gesture-handler": "2.25.0",
         "react-native-get-random-values": "^1.11.0",
         "react-native-haptic-feedback": "^2.3.3",
         "react-native-i18n": "^2.0.15",
@@ -81,21 +82,21 @@
         "react-native-launch-navigator": "^1.0.9",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-localize": "^3.3.0",
-        "react-native-maps": "^1.20.0",
+        "react-native-maps": "1.26.0",
         "react-native-maps-directions": "^1.9.0",
         "react-native-mmkv-storage": "^0.11.0",
         "react-native-notifications": "^5.1.0",
         "react-native-otp-entry": "^1.7.3",
         "react-native-permissions": "^4.1.1",
-        "react-native-reanimated": "^3.16.1",
+        "react-native-reanimated": "3.18.0",
         "react-native-render-html": "^6.3.4",
         "react-native-safe-area-context": "^5.0.0",
-        "react-native-screens": "^4.3.0",
+        "react-native-screens": "4.6.0",
         "react-native-share": "^12.0.9",
         "react-native-signature-canvas": "^4.7.2",
         "react-native-snap-carousel": "^3.9.1",
         "react-native-super-grid": "^6.0.1",
-        "react-native-svg": "^15.10.1",
+        "react-native-svg": "^15.15.0",
         "react-native-vision-camera": "^4.6.4",
         "react-native-web": "^0.19.13",
         "react-native-webview": "^13.12.3",
@@ -113,10 +114,10 @@
         "@react-native-community/cli": "15.0.1",
         "@react-native-community/cli-platform-android": "15.0.1",
         "@react-native-community/cli-platform-ios": "15.0.1",
-        "@react-native/babel-preset": "0.77.0-rc.6",
-        "@react-native/eslint-config": "0.77.0-rc.6",
-        "@react-native/metro-config": "0.77.0-rc.6",
-        "@react-native/typescript-config": "0.77.0-rc.6",
+        "@react-native/babel-preset": "0.77.0",
+        "@react-native/eslint-config": "0.77.0",
+        "@react-native/metro-config": "0.77.0",
+        "@react-native/typescript-config": "0.77.0",
         "@types/jest": "^29.5.13",
         "@types/react": "^18.2.6",
         "@types/react-test-renderer": "^18.0.0",
@@ -130,6 +131,8 @@
         "html-webpack-plugin": "^5.6.3",
         "jest": "^29.6.3",
         "metro-react-native-babel-preset": "^0.77.0",
+        "patch-package": "^8.0.1",
+        "postinstall-postinstall": "^2.1.0",
         "prettier": "^3.3.3",
         "react-test-renderer": "18.3.1",
         "style-loader": "^4.0.0",
